--- a/Color Picker Unlimited/SettingsWindow.xaml
+++ b/Color Picker Unlimited/SettingsWindow.xaml
@@ -7,10 +7,48 @@
         mc:Ignorable="d"
         Title="SettingsWindow" Height="200" Width="300">
     <Grid>
-        <Label Content="Settings" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="ThemeComboBox" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ThemeComboBox_SelectionChanged">
-            <ComboBoxItem IsSelected="True">Light</ComboBoxItem>
-            <ComboBoxItem>Dark</ComboBoxItem>
-        </ComboBox>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Label Grid.Row="0" Content="Settings" />
+        
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
+
+            <Label Grid.Column="0" Grid.Row="0"
+                   Content="Refresh Rate (ms)"
+                   HorizontalAlignment="Right" />
+            <Label Grid.Column="0" Grid.Row="1"
+                   Content="Theme"
+                   HorizontalAlignment="Right" />
+
+            <TextBox Grid.Column="1" Grid.Row="0"
+                    TextWrapping="Wrap" 
+                    Text="16" 
+                    Width="61" 
+                    Height="25"
+                    TextChanged="TextBox_TextChanged"
+                    HorizontalAlignment="Left"/>
+            <ComboBox Grid.Column="1" Grid.Row="1"
+                      x:Name="ThemeComboBox"
+                      HorizontalAlignment="Left"
+                      Width="94" 
+                      Height="25"
+                      SelectionChanged="ThemeComboBox_SelectionChanged">
+                <ComboBoxItem IsSelected="True">Light</ComboBoxItem>
+                <ComboBoxItem>Dark</ComboBoxItem>
+            </ComboBox>
+        </Grid>
     </Grid>
 </Window>
