--- a/Color Picker Unlimited/SettingsWindow.xaml
+++ b/Color Picker Unlimited/SettingsWindow.xaml
@@ -6,14 +6,15 @@
         xmlns:local="clr-namespace:Color_Picker_Unlimited"
         mc:Ignorable="d"
         Title="SettingsWindow" Height="200" Width="300">
-    <Grid>
+    <Grid Background="{DynamicResource WindowBackgroundBrush}">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Settings" />
+        <Label Grid.Row="0" Content="Settings" FontWeight="Bold"
+                   Foreground="{DynamicResource TextForegroundBrush}" HorizontalAlignment="Center" />
         
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -28,25 +29,27 @@
 
             <Label Grid.Column="0" Grid.Row="0"
                    Content="Refresh Rate (ms)"
-                   HorizontalAlignment="Right" />
+                   HorizontalAlignment="Right"
+                   Foreground="{DynamicResource TextForegroundBrush}"/>
             <Label Grid.Column="0" Grid.Row="1"
                    Content="Theme"
-                   HorizontalAlignment="Right" />
+                   HorizontalAlignment="Right"
+                   Foreground="{DynamicResource TextForegroundBrush}"/>
 
-            <TextBox Grid.Column="1" Grid.Row="0"
+            <TextBox x:Name="RefreshRateTextBox" Grid.Column="1" Grid.Row="0"
                     TextWrapping="Wrap" 
                     Text="16" 
                     Width="61" 
                     Height="25"
-                    TextChanged="TextBox_TextChanged"
-                    HorizontalAlignment="Left"/>
+                    TextChanged="RefreshRateTextBox_TextChanged"
+                    HorizontalAlignment="Left" MaxLines="1"/>
             <ComboBox Grid.Column="1" Grid.Row="1"
                       x:Name="ThemeComboBox"
                       HorizontalAlignment="Left"
                       Width="94" 
                       Height="25"
                       SelectionChanged="ThemeComboBox_SelectionChanged">
-                <ComboBoxItem IsSelected="True">Light</ComboBoxItem>
+                <ComboBoxItem>Light</ComboBoxItem>
                 <ComboBoxItem>Dark</ComboBoxItem>
             </ComboBox>
         </Grid>
