--- a/Color Beluga/App.xaml
+++ b/Color Beluga/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Color_Picker_Unlimited.App"
+﻿<Application x:Class="Color_Beluga.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Color_Picker_Unlimited"
+             xmlns:local="clr-namespace:Color_Beluga"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
