--- a/Color Beluga/SettingsWindow.xaml
+++ b/Color Beluga/SettingsWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Color_Picker_Unlimited.SettingsWindow"
+﻿<Window x:Class="Color_Beluga.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Color_Picker_Unlimited"
+        xmlns:local="clr-namespace:Color_Beluga"
         mc:Ignorable="d"
         Title="SettingsWindow" Height="200" Width="300">
     <Grid Background="{DynamicResource WindowBackgroundBrush}">
