--- a/Color Beluga/MainWindow.xaml
+++ b/Color Beluga/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Color_Beluga"
         mc:Ignorable="d"
         WindowStyle="None" ResizeMode="NoResize" Topmost="True"
-        Title="MainWindow" Height="40" Width="200">
+        Title="MainWindow" Height="80" Width="200">
     <Grid x:Name="MainGrid" Background="{DynamicResource WindowBackgroundBrush}" MouseDown="Grid_MouseDown">
         <Grid.ContextMenu>
             <ContextMenu>
@@ -17,6 +17,7 @@
         </Grid.ContextMenu>
         <TextBlock x:Name="ColorName" Foreground="{DynamicResource TextForegroundBrush}" HorizontalAlignment="Left" Margin="10,4,0,0" TextWrapping="Wrap" Text="Color Name" VerticalAlignment="Top" FontWeight="Bold"/>
         <TextBlock x:Name="ColorInfo" Foreground="{DynamicResource TextForegroundBrush}" HorizontalAlignment="Left" Margin="10,18,0,0" TextWrapping="Wrap" Text="R: 100 G: 100 B: 100" VerticalAlignment="Top"/>
-        <Rectangle x:Name="ColorBox" HorizontalAlignment="Left" Height="64" Margin="125,0,0,0" Stroke="Black" VerticalAlignment="Center" Width="71" Fill="Red" RenderTransformOrigin="1.254,0.406"/>
+        <Rectangle x:Name="ColorBox" HorizontalAlignment="Left" Height="64" Margin="125,120,0,0" Stroke="Black" VerticalAlignment="Center" Width="71" Fill="Red" RenderTransformOrigin="1.254,0.406"/>
+        <Image x:Name="ClonedPixelsImage" Width="64" Height="64" Margin="128,8,8,8" RenderOptions.BitmapScalingMode="NearestNeighbor" />
     </Grid>
 </Window>
