--- a/Color Beluga/MainWindow.xaml
+++ b/Color Beluga/MainWindow.xaml
@@ -17,7 +17,10 @@
         </Grid.ContextMenu>
         <TextBlock x:Name="ColorName" Foreground="{DynamicResource TextForegroundBrush}" HorizontalAlignment="Left" Margin="10,4,0,0" TextWrapping="Wrap" Text="Color Name" VerticalAlignment="Top" FontWeight="Bold"/>
         <TextBlock x:Name="ColorInfo" Foreground="{DynamicResource TextForegroundBrush}" HorizontalAlignment="Left" Margin="10,18,0,0" TextWrapping="Wrap" Text="R: 100 G: 100 B: 100" VerticalAlignment="Top"/>
-        <Rectangle x:Name="ColorBox" HorizontalAlignment="Left" Height="64" Margin="125,120,0,0" Stroke="Black" VerticalAlignment="Center" Width="71" Fill="Red" RenderTransformOrigin="1.254,0.406"/>
-        <Image x:Name="ClonedPixelsImage" Width="64" Height="64" Margin="128,8,8,8" RenderOptions.BitmapScalingMode="NearestNeighbor" />
+        <Border BorderThickness="1" BorderBrush="Black" Width="67" Height="67" Margin="0,0,6,0" HorizontalAlignment="Right">
+            <Image x:Name="ClonedPixelsImage" Width="64" Height="64" RenderOptions.BitmapScalingMode="NearestNeighbor" />
+        </Border>
+        <Button x:Name="ButtonZoomOut" Width="20" Content="-" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" Click="ButtonZoomOut_Click"/>
+        <Button x:Name="ButtonZoomIn" Width="20" Content="+" HorizontalAlignment="Left" Margin="35,40,0,0" VerticalAlignment="Top" Click="ButtonZoomIn_Click"/>
     </Grid>
 </Window>
