--- a/Color Beluga/MainWindow.xaml
+++ b/Color Beluga/MainWindow.xaml
@@ -20,7 +20,7 @@
         <Border BorderThickness="1" BorderBrush="Black" Width="67" Height="67" Margin="0,0,6,0" HorizontalAlignment="Right">
             <Image x:Name="ClonedPixelsImage" Width="64" Height="64" RenderOptions.BitmapScalingMode="NearestNeighbor" />
         </Border>
-        <Button x:Name="ButtonZoomOut" Width="20" Content="-" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" Click="ButtonZoomOut_Click"/>
-        <Button x:Name="ButtonZoomIn" Width="20" Content="+" HorizontalAlignment="Left" Margin="35,40,0,0" VerticalAlignment="Top" Click="ButtonZoomIn_Click"/>
+        <Button x:Name="ButtonZoomOut" Width="20" Content="-" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" Click="ButtonZoomOut_Click" FontWeight="Bold"/>
+        <Button x:Name="ButtonZoomIn" Width="20" Content="+" HorizontalAlignment="Left" Margin="35,40,0,0" VerticalAlignment="Top" Click="ButtonZoomIn_Click" FontWeight="Bold"/>
     </Grid>
 </Window>
